Update of Chrome tests to JDK 17.